--- a/app/goods/templates/goods/catalog.html
+++ b/app/goods/templates/goods/catalog.html
@@ -45,20 +45,29 @@
     <!-- Карта товара -->
     <div class="col-lg-4 col-md-6 p-4">
         <div class="card border-primary rounded custom-shadow">
+            {% if product.image %}
             <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+            {% else %}
+            <img src="{% static 'deps/images/Not_found_image.jpg' %}" class="card-img-top" alt="{{ product.name }}">
+            {% endif %}
             <div class="card-body">
                 <a href="../goods/product.html">
                     <p class="card-title">{{product.name}}</p>
                 </a>
                 <p class="card-text text-truncate">{{product.description}}</p>
-                <p class="product_id">id: 02265</p>
+                <p class="product_id">id: {{product.display_id}}</p>
                 <div class="d-flex justify-content-between">
-                    <p><s>100</s> $</p>
-                    <p><strong>{{product.price}} $</strong></p>
-                    <span class="badge bg-warning text-dark">Скидка 10.00 %</span>
+                    {% if product.discount %}
+                        <p><s>{{product.price}}</s> $</p>
+                        <p><strong>{{product.sell_price}} $</strong></p>
+                        <span class="badge bg-warning text-dark">Скидка {{product.discount}} %</span>
+                    {% else %}
+                        <p><strong>{{product.price}} $</strong></p>
+                    {% endif %}
+
                     <!-- <p><strong>100.00 $</strong></p> -->
                     <a href="#" class="btn add-to-cart">
-                        <img class="mx-1" src="../deps/icons/cart-plus.svg" alt="Catalog Icon"
+                        <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
                             width="32" height="32">
                     </a>
                 </div>
