--- a/app/goods/templates/goods/catalog.html
+++ b/app/goods/templates/goods/catalog.html
@@ -48,10 +48,10 @@
             {% if product.image %}
             <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
             {% else %}
-            <img src="{% static 'deps/images/Not_found_image.jpg' %}" class="card-img-top" alt="{{ product.name }}">
+            <img src="{% static 'deps/images/Not_found_image.png' %}" class="card-img-top" alt="{{ product.name }}">
             {% endif %}
             <div class="card-body">
-                <a href="../goods/product.html">
+                <a href="{% url 'catalog:product' product.slug %}">
                     <p class="card-title">{{product.name}}</p>
                 </a>
                 <p class="card-text text-truncate">{{product.description}}</p>
