--- a/app/goods/templates/goods/product.html
+++ b/app/goods/templates/goods/product.html
@@ -3,7 +3,50 @@
 
 {% load static %}
 
-{% block footer %}
-    
+{% block content %}
+                        <!-- Контент на странице -->
+                        <div class="container mt-5">
+                            <div class="card mb-4 custom-shadow">
+                                <div class="row">
+                                    <!-- Миниатюры -->
+                                    <div class="col-md-4">
+                                        {% if product.image %}
+                                            <img src="{{ product.image.url }}" class="img-thumbnail"data-bs-toggle="modal" data-bs-target="#imageModal1">
+                                        {% else %}
+                                            <img src="{% static 'deps/images/Not_found_image.png' %}"class="card-img-top" alt="{{ product.name }}">
+                                        {% endif %}
+                                    </div>
+                                    <div class="col-md-4 ">
+                                        <p class="product_id mt-3">id: {{product.display_id}}</p>
+                                    </div>
+                                    <!-- Увеличить изображение в модальном окне -->
+                                    <div class="modal fade" id="imageModal1" tabindex="-1" aria-labelledby="imageModal1Label"
+                                        aria-hidden="true">
+                                        <div class="modal-dialog modal-lg">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="imageModal1Label">Изображение 1</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Закрыть"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    {% if product.image %}
+                                                        <img src="{{product.image.url}}" class="img-fluid" alt="Изображение 1">
+                                                    {% else %}
+                                                        <img src="{% static 'deps/images/Not_found_image.png' %}"class="card-img-top" alt="{{ product.name }}">
+                                                    {% endif %}
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Описание товара -->
+                                <div class="card-body">
+                                    <p class="card-text">Цена: <strong>150.00 $</strong></p>
+                                    <h5 class="card-title">{{product.name}}</h5>
+                                    <p class="card-text">{{product.description}}</p>
+                                    <a href="#" class="btn btn-dark add-to-cart">Добавить в корзину</a>
+                                </div>
+                            </div>
+                        </div>
 {% endblock %}
-
