--- a/app/goods/templates/goods/catalog.html
+++ b/app/goods/templates/goods/catalog.html
@@ -75,6 +75,25 @@
         </div>
     </div>
     {% endfor %}
+
+    <!-- Пагинация -->
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center my-4">
+            <div class="custom-shadow d-flex">
+                <li class="page-item disabled">
+                    <a class="page-link">Previous</a>
+                </li>
+
+                {% for page in goods.paginator.page_range %}
+                <li class="page-item"><a class="page-link" href="{% url 'catalog:index' slug_url page %}">{{ page }}</a></li>
+                {% endfor %}
+
+                <li class="page-item">
+                    <a class="page-link" href="#">Next</a>
+                </li>
+            </div>
+        </ul>
+    </nav>
     
 
 </div>
