--- a/app/goods/templates/goods/catalog.html
+++ b/app/goods/templates/goods/catalog.html
@@ -77,23 +77,62 @@
     {% endfor %}
 
     <!-- Пагинация -->
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center my-4">
-            <div class="custom-shadow d-flex">
-                <li class="page-item disabled">
-                    <a class="page-link">Previous</a>
-                </li>
+    <div class="d-flex justify-content-center my-4">
+        <nav aria-label="Page navigation">
+            <ul class="pagination pagination-lg">
+                {% if goods.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="{% url 'catalog:index' slug_url goods.previous_page_number %}">&laquo;</a>
+                    </li>
+                {% else %}
+                    <li class="page-item disabled">
+                        <span class="page-link">&laquo;</span>
+                    </li>
+                {% endif %}
 
-                {% for page in goods.paginator.page_range %}
-                <li class="page-item"><a class="page-link" href="{% url 'catalog:index' slug_url page %}">{{ page }}</a></li>
+                {# Показываем только 5 страниц вокруг текущей #}
+                {% for page_num in goods.paginator.page_range %}
+                    {% if page_num >= goods.number|add:'-2' and page_num <= goods.number|add:'2' %}
+                        {% if page_num == goods.number %}
+                            <li class="page-item active">
+                                <span class="page-link">{{ page_num }}</span>
+                            </li>
+                        {% else %}
+                            <li class="page-item">
+                                <a class="page-link" href="{% url 'catalog:index' slug_url page_num %}">{{ page_num }}</a>
+                            </li>
+                        {% endif %}
+                    {% elif page_num == 1 and goods.number > 3 %}
+                        <li class="page-item">
+                            <a class="page-link" href="{% url 'catalog:index' slug_url 1 %}">1</a>
+                        </li>
+                        <li class="page-item disabled">
+                            <span class="page-link">...</span>
+                        </li>
+                    {% elif page_num == goods.paginator.num_pages and goods.number < goods.paginator.num_pages|add:'-2' %}
+                        <li class="page-item disabled">
+                            <span class="page-link">...</span>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="{% url 'catalog:index' slug_url goods.paginator.num_pages %}">{{ goods.paginator.num_pages }}</a>
+                        </li>
+                    {% endif %}
                 {% endfor %}
 
-                <li class="page-item">
-                    <a class="page-link" href="#">Next</a>
-                </li>
-            </div>
-        </ul>
-    </nav>
+                {% if goods.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="{% url 'catalog:index' slug_url goods.next_page_number %}">&raquo;</a>
+                    </li>
+                {% else %}
+                    <li class="page-item disabled">
+                        <span class="page-link">&raquo;</span>
+                    </li>
+                {% endif %}
+            </ul>
+        </nav>
+    </div>
+    
+    
     
 
 </div>
